--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,9 +5,9 @@
     xmlns:android="http://schemas.android.com/apk/res/android">
 
     <ImageView
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="match_parent"
-        android:background="@drawable/hallway"/>
+        android:background="@drawable/hallway_2"/>
 
     <com.example.minhduc0711.indoorlocalization.MapView
         android:id="@+id/map_view"
