--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,17 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout android:layout_height="match_parent"
+<LinearLayout
+    android:orientation="vertical"
     android:layout_width="match_parent"
-    android:id="@+id/frame_layout_main"
+    android:layout_height="match_parent"
     xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="match_parent"
-        android:background="@drawable/hallway_2"/>
-
-    <com.example.minhduc0711.indoorlocalization.MapView
-        android:id="@+id/map_view"
+    <FrameLayout android:layout_height="match_parent"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:id="@+id/frame_layout_main"
+        xmlns:android="http://schemas.android.com/apk/res/android">
 
-</FrameLayout>
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:background="@drawable/hallway_2"/>
+
+        <com.example.minhduc0711.indoorlocalization.MapView
+            android:id="@+id/map_view"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" />
+
+    </FrameLayout>
+
+</LinearLayout>
